--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Naima's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/naimavahab/Resume/blob/d76798e1d426008b3420a47ed8787470d8e102d3/Naima_Vahab_CV_Research_2023.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/naimavahab/Resume/blob/main/Naima_Vahab_CV_Research_2023.pdf" style="width:100%; 
+      height:100%;" frameborder="0"></iframe>
   </body>
 </html>
